# docs/swagger.json
@@ -9,13 +9,13 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/tasks/createTask": {
+        "/tasks/create": {
             "post": {
                 "responses": {
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -37,7 +37,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AddFileRequest"
+                            "$ref": "#/definitions/dto.AddFileRequest"
                         }
                     }
                 ],
@@ -45,7 +45,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -66,13 +66,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TaskStatusResponse"
+                            "$ref": "#/definitions/dto.TaskStatusResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -80,7 +80,7 @@
         }
     },
     "definitions": {
-        "model.AddFileRequest": {
+        "dto.AddFileRequest": {
             "type": "object",
             "properties": {
                 "url": {
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "model.ErrorResponse": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -96,11 +96,12 @@
                 }
             }
         },
-        "model.TaskStatusResponse": {
+        "dto.TaskStatusResponse": {
             "type": "object",
             "properties": {
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "Created"
                 }
             }
         }
